lp flow updates2